--- a/Masterarbeit 4/Tex/Literature.bib
+++ b/Masterarbeit 4/Tex/Literature.bib
@@ -602,6 +602,17 @@ pages={1-23}
     url = "http://www.eclipse.org/epf/downloads/praclib/praclib_downloads.php"}
     
   }
+  
+  @inproceedings{bpm07,
+  added-at = {2012-11-22T19:17:38.000+0100},
+  author = {Mendling, J. and Reijers, H.A. and Cardoso, J.},
+  biburl = {http://www.bibsonomy.org/bibtex/22d1c68cd03dc092ede3cfb13e70ae182/wvdaalst},
+  booktitle = {International Conference on Business Process Management (BPM 2007)},
+  editor = {Alonso, G. and Dadam, P. and Rosemann, M.},
+   pages = {48--63},
+  publisher = {Springer-Verlag, Berlin},
+  series = {Lecture Notes in Computer Science},
+  title = {What Makes Process Models Understandable?}}
 
 
 
