--- a/Masterarbeit 4/Tex/chapter6.tex
+++ b/Masterarbeit 4/Tex/chapter6.tex
@@ -621,7 +621,7 @@ Bei der nächsten Aktivität wird der \textit{Arbeitsauftrag vergeben} und danac
 \begin{center}
   \includegraphics[width=\linewidth]{PlanungSteuerungKlein} %pdf, jpg, png...
   \caption{Planung und Steuerung V-Modell - imperativ}
-  \label{fig:PlanungSteuerungKlein}
+  \label{fig:PlanungundSteuerung}
 \end{center}
 \end{figure}
 
